Update: added learn book marks

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -128,7 +128,9 @@
                   <summary>How to Organize</summary>
                   <ul style="color: #cec090;">
                     <li><a href="https://www.veteransfightingfascism.org/how-to-start-an-antifascist-book-club" target="_blank">How To Start An Antifascist Book Club</a></li>
+                    <li><a href="https://substack.com/home/post/p-166448269" target="_blank">40 Blueprints to Building Community</a></li>
                     <li><a href="https://www.iheart.com/podcast/105-it-could-happen-here-30717896/episode/how-to-organize-a-meeting-283234694/" target="_blank">How to Organize A Meeting part 1</a></li>
+                    <li><a href="https://www.iheart.com/podcast/105-it-could-happen-here-30717896/episode/how-to-organize-a-meeting-283489941/" target="_blank">How to Organize A Meeting part 2</a></li>
                     <!-- Add more bookmarks here -->
                   </ul>
                   <summary>Linux</summary>
