Update: change font, book marks, and center photos

--- a/assets/blogs/art/angel_city_08.18.2024.html
+++ b/assets/blogs/art/angel_city_08.18.2024.html
@@ -1,3 +1,6 @@
+
+<center>
+
 <a href="https://www.instagram.com/rorylocc/" style="color: #70807d;" target="_blank" rel="noopener noreferrer">
     <h2 style="color: #70807d;">@RORYLOCC Djing some reggae.</h2>
 </a>
@@ -32,3 +35,4 @@
 <img src="assets/images/art/angel_city_08.18.2024/roger_5.gif" class="art-photos">
 
 <br><br><br><br><br>
+</center>
