--- a/assets/blogs/home/film_soup.html
+++ b/assets/blogs/home/film_soup.html
@@ -1,5 +1,8 @@
 <h2>LOMOGRAPHY part 1, FILM SOUP</h2>
 <h2>11.12.2024</h2>
+
+<center>
+
 <p>
     When I was in my early 20s I became really interested in the art of lomography. It's a wildly unpredictable for of photography 
     that uses low quality cameras, expired film, drilling holes in film canisters and even soaking unexposed film in random liquids 
@@ -19,7 +22,7 @@
     a DIY Python Programable Camera. This camera takes pretty low quality photos that I find charming. 
 </p>
 
-<img src="assets/images/art/biosphere_2_09.15.2024/biosphere1.jpg" alt="Photo of the biosphere 2" class="bio-image">
+<img src="assets/images/art/biosphere_2_09.15.2024/biosphere1.jpg" alt="Photo of the biosphere 2" class="article-image">
 
 <p>
     Now taking pictures is great but I want to try and embrace the Lomo life. My first task was to create my own digital film soup. 
@@ -33,7 +36,7 @@
     Flickr page and dug through their Decorative Papers Collection. I was able to create 21 beer, 18 gin, 13 rose, 18 rum and 18 whiskey filters. 
 </p>
 
-<img src="assets/images/art/film_soup_blog/Original.jpg" alt="Original Asteroid Vinyl store front photo" class="bio-image">
+<img src="assets/images/art/film_soup_blog/Original.jpg" alt="Original Asteroid Vinyl store front photo" class="article-image">
 
 <p>
     The cli Film Soup filter asks for an original image to effect. It then asks for which soup you would like to soak the film in. 
@@ -44,7 +47,7 @@
     complicated math to determine the values after "soak time" and I'll admit I had ChatGPT help me work it out.
 </p>
 
-<img src="assets/images/art/film_soup_blog/beer_at_65.jpg" alt="Asteroid Vinyl store front with beer filter" class="bio-image">
+<img src="assets/images/art/film_soup_blog/beer_at_65.jpg" alt="Asteroid Vinyl store front with beer filter" class="article-image">
 
 <p>
     Pretty quickly I realized I had a problem. My photo often lost a lot of it's definition when filtered. I had to create a buffer that 
@@ -52,7 +55,7 @@
     protected the original structure of the photo, even if the "soak time" was maximized.
 </p>
 
-<img src="assets/images/art/film_soup_blog/gin_at_100.jpg" alt="Asteroid Vinyl store front with gin filter" class="bio-image">
+<img src="assets/images/art/film_soup_blog/gin_at_100.jpg" alt="Asteroid Vinyl store front with gin filter" class="article-image">
 
 <p>
     Once I had blends I liked it was time to think about the bigger picture... get it? The goal of this project was to create a 
@@ -63,7 +66,7 @@
     chance to learn some new skills but that will come in time. For now I am quite happy.
 </p>
 
-<img src="assets/images/art/film_soup_blog/rose_at_35.jpg" alt="Asteroid Vinyl store front with rose filter" class="bio-image">
+<img src="assets/images/art/film_soup_blog/rose_at_35.jpg" alt="Asteroid Vinyl store front with rose filter" class="article-image">
 
 <p>
     I tested the filter on a roll (directory / folder) of several pictures from the Memento camera. This filter looks great on black 
@@ -79,4 +82,4 @@
 </p>
 
 <br><br><br><br><br>
-
+</center>
