--- a/bookmarks.html
+++ b/bookmarks.html
@@ -140,6 +140,7 @@
                     <li><a href="https://simplifier.neocities.org/" target="_blank">Simplify Anything</a></li>
                     <li><a href="https://solar.lowtechmagazine.com/" target="_blank">Low Tech Magazine</a></li>
                     <li><a href="https://www.instructables.com/" target="_blank">Instructables</a></li>
+                    <li><a href="https://youtube.com/playlist?list=PLEBQazB0HUyTF7kB7v1S77F9QK0gT--Kt&si=vq_DjP0KqRDWtSuV" target="_blank">Becky Stern Micro Electronics</a></li>
                     <!-- Add more bookmarks here -->
                   </ul>
                 </details>
@@ -157,6 +158,8 @@
                   <ul style="color: #cec090;">
                     <li><a href="https://www.practicalnetworking.net/" target="_blank">Practical Networking</a></li>
                     <li><a href="https://teachyourselfcs.com/" target="_blank">Teach Yourself Computer Science</a></li>
+                    <li><a href="https://tumbleforth.hardcoded.net/" target="_blank">Tumble Forth (intro to low level programing)</a></li>
+                    <li><a href="https://github.com/StructuredCS/algorithm-analysis-deep-dive" target="_blank">Algorithm Analysis</a></li>
                     <li><a href="https://github.com/ossu/computer-science" target="_blank">OSSU</a></li>
                     <li><a href="https://cs50.harvard.edu/x/2025/" target="_blank">CS50X</a></li>
                     <!-- Add more bookmarks here -->
@@ -213,11 +216,12 @@
                 </details>
 
                 <details>
-                  <summary>Free Movies</summary>
+                  <summary>Free Movies and Shows</summary>
                   <ul style="color: #cec090;">
                     <li><a href="https://www.docplus.com/" target="_blank">Documentary+</a></li>
                     <li><a href="https://www.kanopy.com/en" target="_blank">Kanopy</a></li>
                     <li><a href="https://www.effedupmovies.com/" target="_blank">Effed Up Movies (adblocker encouraged)</a></li>
+                    <li><a href="https://m.wcostream.tv/" target="_blank">Watch Cartoons On Stream (anime)</a></li>
                     <!-- Add more bookmarks here -->
                   </ul>
                 </details>
@@ -229,6 +233,8 @@
                     <li><a href="https://gifcities.org/" target="_blank">GifCities</a></li>
                     <li><a href="https://thispersondoesnotexist.com/" target="_blank">This Person Doesn't Exist</a></li>
                     <li><a href="https://www.pexels.com/" target="_blank">Pexels</a></li>
+                    <li><a href="https://thenounproject.com/" target="_blank">The Noun Project (icons and images)</a></li>
+                    <li><a href="https://github.com/leroiduflow/Wallsync" target="_blank">Wallsync (large collection of walpereper sites)</a></li>
                     <!-- Add more bookmarks here -->
                   </ul>
                 </details>
@@ -249,6 +255,17 @@
                     <!-- Add more bookmarks here -->
                   </ul>
                 </details>
+
+                <details>
+                  <summary>Free Games</summary>
+                  <ul style="color: #cec090;">
+                    <li><a href="https://ncase.me/" target="_blank">It's Nicky Case!</a></li>
+                    <li><a href="https://abandonwaregames.net/" target="_blank">Abandonware Games</a></li>
+                    <li><a href="https://flashpointarchive.org/" target="_blank">Flashpoint Archive</a></li>
+                    <!-- Add more bookmarks here -->
+                  </ul>
+                </details>
+
 
               </ul>
             </details>
