--- a/assets/blogs/art/wife_and_puppy_07.24.2024.html
+++ b/assets/blogs/art/wife_and_puppy_07.24.2024.html
@@ -1,5 +1,6 @@
-
+<center>
 <img src="assets/images/art/wife_and_puppy_07.24.2024/kc_bauer_pink.jpg" class="art-photos">
 <img src="assets/images/art/wife_and_puppy_07.24.2024/bauer_sit.jpg" class="art-photos">
 <img src="assets/images/art/wife_and_puppy_07.24.2024/bauer_smile.gif" class="art-photos">
 <br><br><br><br><br>
+</center>
