--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>SatanicLlamaPlaza</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="copykitty.css">
   <script src="./assets/scripts/home.js" defer></script>
   <script src="./assets/scripts/music_links.js" defer></script>
 </head>
@@ -93,6 +94,22 @@
       <a href="https://github.com/satanicllamaplaza" target="_blank" rel="noopener noreferrer"><img
           src="./assets/images/icons/cool-retro-term.png" class="icon" alt="Playlist" /></a>
       <h2>Copyright is a Scam</h2>
+
+      <!--
+      <div data-widget="copykitty" class="ck-box">
+        <div class="ck-media">
+          <img src="https://skelf.neocities.org/copykitty.png" alt="CopyKitty mascot" loading="lazy" />
+        </div>
+        <div class="ck-content">
+          <div class="ck-title" id="ck-title">This User is a Friend Of CopyKitty</div>
+          <div class="ck-body" id="ck-body">
+            <h3>Copyright is a Scam</h3>
+            <p><a href="https://skelf.neocities.org/copykitty.html"> More info here! </a></p>
+          </div>
+        </div>
+      </div>
+      -->
+
 
       <a href="#" onclick="openRandomLink(); return false;">
         <img src="./assets/images/icons/audio-x-wav.png" class="icon" alt="Playlist" />
