--- a/a_town_called_terror_html/README.html
+++ b/a_town_called_terror_html/README.html
@@ -21,7 +21,7 @@ called Haunted Hell Ride. There is Future Potential For expansions like:
 (classic sports and jock tropes) * Ouija’s Mansion (classic haunted
 mansion) * Carn-Evil (carnival themes, coaster events and items from the
 fair grounds)</p>
-<p><a href="./skill_tree.md">Skill Tree Concept</a></p>
+<p><a href="./skill_tree.html">Skill Tree Concept</a></p>
 <h2 id="rules">Rules:</h2>
 <ul>
 <li><p>Shuffle deck well and deal each player 10 cards.</p></li>
@@ -52,7 +52,7 @@ candles, feathers, spices</li>
 <li>Monsters</li>
 <li>Man (Murderers)</li>
 </ul>
-<p><a href="./fighter_cards.md">Fighter Cards</a></p>
-<p><a href="./item_cards.md">Item Cards</a></p>
-<p><a href="./event_cards.md">Event Cards</a></p>
-<p><a href="./curse_cards.md">Curse Cards</a></p>
+<p><a href="./fighter_cards.html">Fighter Cards</a></p>
+<p><a href="./item_cards.html">Item Cards</a></p>
+<p><a href="./event_cards.html">Event Cards</a></p>
+<p><a href="./curse_cards.html">Curse Cards</a></p>
