added auto date to book mark data

--- a/bookmark_data.html
+++ b/bookmark_data.html
@@ -1,5 +1,5 @@
 <h1>My Book Marx</h1>
-<h2>Updated 12.01.2025</h2>
+<h2>Last updated 12.02.2025</h2>
 <hr>
 <details>
 <summary>Heath Care</summary>
