added puzzle shrine

--- a/art.html
+++ b/art.html
@@ -72,6 +72,9 @@
     <div class="box" id="bottombar" style="border-color: #935463;">
       <a href="https://github.com/satanicllamaplaza" target="_blank" rel="noopener noreferrer"><img
           src="./assets/images/icons/cool-retro-term.png" class="icon" alt="Playlist" /></a>
+
+      <a href="./puzzles.html"><img src="./assets/images/icons/puzzle_piece.png" class="icon" alt="Code" /></a>
+
       <h2>Copyright is a Scam</h2>
 
       <a href="#" onclick="openRandomLink(); return false;">
