--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <main>
     <div class="container_1">
       <!-- Topbar -->
-      <div class="box" id="topbar" style="border-color: #98971a;">
+      <div class="box" id="topbar" style="border-color: #be6411;">
         <h1 class="logo">SatanicLlamaPlaza</h1>
         <a href="./index.html"><img src="./assets/images/icons/tools-wizard.png" class="icon" alt="Code" /></a>
         <a href="./bookmarks.html"><img src="./assets/images/icons/bookmark-edit.png" class="icon" alt="Code" /></a>
@@ -22,7 +22,7 @@
       </div>
       <div class="container_2">
         <!-- Main content area -->
-        <div class="box" id="content" style="border-color: #98971a;">
+        <div class="box" id="content" style="border-color: #be6411;">
           <div id="post-container">
 
             <!--WARN: PAGE CONTENTS START HERE -->
@@ -53,7 +53,7 @@
           </div>
         </div>
         <!-- Right sidebar -->
-        <div class="box" id="sidebar" style="border-color: #98971a;">
+        <div class="box" id="sidebar" style="border-color: #be6411;">
           <h2>My Recent Blog Posts</h2>
           <div id="sidebar-content">
             <ul id="post-titles">
@@ -65,9 +65,12 @@
     </div>
   </main>
   <footer>
-    <div class="box" id="bottombar" style="border-color: #98971a;">
+    <div class="box" id="bottombar" style="border-color: #be6411;">
       <a href="https://github.com/satanicllamaplaza" target="_blank" rel="noopener noreferrer"><img
           src="./assets/images/icons/cool-retro-term.png" class="icon" alt="Playlist" /></a>
+
+      <a href="./puzzles.html"><img src="./assets/images/icons/puzzle_piece.png" class="icon" alt="Code" /></a>
+
       <h2>Copyright is a Scam</h2>
 
       <a href="#" onclick="openRandomLink(); return false;">
