--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     <div class="box" id="bottombar">
       <a href="https://github.com/satanicllamaplaza" target="_blank" rel="noopener noreferrer"><img
           src="./assets/images/icons/cool-retro-term.png" class="icon" alt="Playlist" /></a>
+
+      <a href="./puzzles.html"><img src="./assets/images/icons/puzzle_piece.png" class="icon" alt="Code" /></a>
+
       <h2>Copyright is a Scam</h2>
 
       <!--
