--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <script src="./assets/scripts/music_links.js" defer></script>
 </head>
 
-<body class="repair">
+<body class="junk">
   <main>
     <div class="container_1">
       <!-- Topbar -->
