--- a/puzzles.html
+++ b/puzzles.html
@@ -9,7 +9,7 @@
   <script src="./assets/scripts/music_links.js" defer></script>
 </head>
 
-<body class="puzzles">
+<body class="repair">
   <main>
     <div class="container_1">
       <!-- Topbar -->
