--- a/puzzles.html
+++ b/puzzles.html
@@ -43,6 +43,8 @@
 
             <center>
 
+            <img src="./assets/images/puzzles/63_american_national_parks.JPG" class="art-photos">
+            <br><br>
             <img src="./assets/images/puzzles/mushrooms.JPG" class="art-photos">
             <br><br>
             <img src="./assets/images/puzzles/olivia_2.JPG" class="art-photos">
