add mammoth puzzle and update book marx

--- a/bookmark_data.html
+++ b/bookmark_data.html
@@ -1,11 +1,12 @@
 <h1>My Book Marx</h1>
-<h2>Last updated 01.15.2026</h2>
+<h2>Last updated 01.30.2026</h2>
 <hr>
 <details>
 <summary>Fuck Fascists</summary>
 <ul style="color: #cec090;">
   <li><a href="https://wiki.icelist.is/" target="_blank">ICE Agent Database | ICE List</a></li>
   <li><a href="https://okstupid.lol/" target="_blank">White Supremacists Database | okstupid.lol</a></li>
+  <li><a href="https://www.standwithminnesota.com/" target="_blank">Stand With Minnesota Donation Directory</a></li>
 </ul>
 </details>
 <details>
@@ -155,7 +156,6 @@
   <summary>Music</summary>
   <ul style="color: #cec090;">
     <li><a href="https://www.justinguitar.com/" target="_blank">Learn how to play guitar | JustinGuitar.com</a></li>
-    <li><a href="https://strudel.cc/" target="_blank">Strudel REPL</a></li>
   </ul>
   </details>
 </ul>
@@ -226,6 +226,8 @@
     <li><a href="https://goblin.tools/" target="_blank">Goblin Tools</a></li>
     <li><a href="https://framasoft.org/en/" target="_blank">Framasoft</a></li>
     <li><a href="https://pinetools.com/" target="_blank">PineTools</a></li>
+    <li><a href="https://openalternative.co/" target="_blank">Open Source Alternatives to Popular Software</a></li>
+    <li><a href="https://neosearch.site/" target="_blank">NeoSearch</a></li>
   </ul>
   </details>
   <details>
@@ -246,22 +248,36 @@
 <details>
 <summary>Alternative Social Media</summary>
 <ul style="color: #cec090;">
-  <li><a href="https://join-lemmy.org/" target="_blank">Lemmy | Federated Reddit</a></li>
-  <li><a href="https://join.piefed.social/" target="_blank">PieFed | Federated Tumbler</a></li>
-  <li><a href="https://www.pi.fyi/" target="_blank">PI.FYI | Federated Blog</a></li>
-  <li><a href="https://neocities.org/" target="_blank">Neocities</a></li>
-  <li><a href="https://joinmastodon.org/" target="_blank">Mastodon | Federated Twitter</a></li>
-  <li><a href="https://loops.video/beta/sign-up" target="_blank">Loops | Federated Tiktok</a></li>
-  <li><a href="https://pixelfed.org/" target="_blank">Pixelfed | Federated Instagram</a></li>
-  <li><a href="https://friendi.ca/" target="_blank">friendica | Federated Facebook</a></li>
+  <details>
+  <summary>Federated Sites</summary>
+  <ul style="color: #cec090;">
+    <li><a href="https://join-lemmy.org/" target="_blank">Lemmy | Federated Reddit</a></li>
+    <li><a href="https://join.piefed.social/" target="_blank">PieFed | Federated Tumbler</a></li>
+    <li><a href="https://www.pi.fyi/" target="_blank">PI.FYI | Federated Blog</a></li>
+    <li><a href="https://joinmastodon.org/" target="_blank">Mastodon | Federated Twitter</a></li>
+    <li><a href="https://loops.video/beta/sign-up" target="_blank">Loops | Federated Tiktok</a></li>
+    <li><a href="https://pixelfed.org/" target="_blank">Pixelfed | Federated Instagram</a></li>
+    <li><a href="https://friendi.ca/" target="_blank">friendica | Federated Facebook</a></li>
+    <li><a href="https://www.funkwhale.audio/?utm_source=substack&utm_medium=email" target="_blank">Funkwhale | Federated Music Community</a></li>
+  </ul>
+  </details>
+  <details>
+  <summary>Revival Sites</summary>
+  <ul style="color: #cec090;">
+    <li><a href="https://www.bitview.net/" target="_blank">youtube revival | BitView</a></li>
+    <li><a href="https://spacehey.com/" target="_blank">Myspace Revival | SpaceHey</a></li>
+    <li><a href="https://neocities.org/" target="_blank">Geocities Revival | Neocities</a></li>
+  </ul>
+  </details>
   <li><a href="https://xmpp.org/" target="_blank">XMPP | Universal Messaging Standard</a></li>
   <li><a href="https://delta.chat/en/" target="_blank">Delta Chat |Decentralized Secure Messenger</a></li>
   <li><a href="https://matrix.org/" target="_blank">Matrix | Decentralized Discord</a></li>
   <li><a href="https://thesovereignnetwork.org/" target="_blank">The Sovereign Network | Decentralized Internet</a></li>
   <li><a href="https://stoat.chat/" target="_blank">Stoat | Community App</a></li>
-  <li><a href="https://www.funkwhale.audio/?utm_source=substack&utm_medium=email" target="_blank">Funkwhale | Federated Music Community</a></li>
   <li><a href="https://trafficcamphotobooth.com/" target="_blank">Traffic Cam Photobooth</a></li>
   <li><a href="https://www.are.na/" target="_blank">Fuck Pinterest | Are.na</a></li>
+  <li><a href="https://www.newgrounds.com/" target="_blank">Everything, By Everyone | Newgrounds</a></li>
+  <li><a href="https://sheezy.art/" target="_blank">Sheezy.Art</a></li>
 </ul>
 </details>
 <details>
@@ -334,11 +350,11 @@
   <summary>movies</summary>
   <ul style="color: #cec090;">
     <li><a href="https://www.youtube.com/playlist?list=PLtRRpiYhD8mhlaG0V0raZociH8rMuoSa1" target="_blank">Black & White Horror | YouTube</a></li>
+    <li><a href="https://www.youtube.com/@kaizomb/playlists" target="_blank">Huge Playlists of Movies | YouTube</a></li>
     <li><a href="https://www.docplus.com/" target="_blank">DOCUMENTARY+</a></li>
     <li><a href="https://www.kanopy.com/en" target="_blank">Library Streaming Service | Kanopy</a></li>
     <li><a href="https://www.effedupmovies.com/" target="_blank">Effed Up Movies</a></li>
     <li><a href="https://m.wcostream.tv/" target="_blank">Watch cartoons online</a></li>
-    <li><a href="https://www.youtube.com/@kaizomb/playlists" target="_blank">Huge Playlists of Movies | YouTube</a></li>
     <li><a href="https://yarrlist.com/movies-and-tv-shows" target="_blank">Free Movies and TV Shows Websites List | YarrList</a></li>
     <li><a href="https://list.vidpop.xyz/" target="_blank">TV Show and Movie Streaming Sites List | FBoxz</a></li>
     <li><a href="https://www.criterionchannel.com/browse" target="_blank">The Criterion Channel</a></li>
@@ -358,20 +374,12 @@
       <li><a href="https://soundscrate.com/sound-fx-categories.html" target="_blank">Royalty Free Sound Effects | SoundsCrate</a></li>
       <li><a href="https://freesound.org/people/craigsmith/" target="_blank">Freesound | craigsmith</a></li>
       <li><a href="https://99sounds.org/" target="_blank">Free Sounds | 99Sounds</a></li>
-      <li><a href="https://www.nasa.gov/audio-and-ringtones/" target="_blank">Audio and Ringtones | NASA</a></li>
       <li><a href="https://www.nps.gov/yell/learn/photosmultimedia/soundlibrary.htm" target="_blank">Sound Library | Yellowstone National Park</a></li>
+      <li><a href="https://www.nasa.gov/audio-and-ringtones/" target="_blank">Audio and Ringtones | NASA</a></li>
       <li><a href="https://citizen-dj.labs.loc.gov/" target="_blank">Library of Congress | Citizen DJ</a></li>
       <li><a href="https://freesound.org/" target="_blank">Freesound</a></li>
-      <details>
-      <summary>Ghosthack</summary>
-      <ul style="color: #cec090;">
-        <li><a href="https://www.ghosthack.de/free_sample_packs/advent-calendar-2019/" target="_blank">Advent Calendar 2019</a></li>
-        <li><a href="https://www.ghosthack.de/free_sample_packs/advent-calendar-2020/" target="_blank">Advent Calendar 2020</a></li>
-        <li><a href="https://www.ghosthack.de/free_sample_packs/advent-calendar-2021/" target="_blank">Advent Calendar 2021</a></li>
-        <li><a href="https://www.ghosthack.de/Service/Free-Sample-Packs/Advent-Calendar-2022/" target="_blank">Advent Calendar 2022</a></li>
-      </ul>
-      </details>
       <li><a href="https://intertapes.net/" target="_blank">Found Cassette Tape Recordings | Intertapes</a></li>
+      <li><a href="https://www.ghosthack.de/Service/Free-Sample-Packs/Advent-Calendar-2025/" target="_blank">Advent Calendar 2025 | Ghosthack</a></li>
     </ul>
     </details>
     <details>
@@ -395,8 +403,12 @@
       <li><a href="https://kx.studio/Repositories:Plugins" target="_blank">Linux Plugins | KXStudio</a></li>
       <li><a href="https://www.pianobook.co.uk/" target="_blank">Indie Samplers | Pianobook</a></li>
       <li><a href="https://github.com/brummer10/NeuralRack" target="_blank">Amp Simulation | NeuralRack</a></li>
+      <li><a href="https://www.tx16wx.com/" target="_blank">TX16Wx Software Sampler</a></li>
+      <li><a href="https://sfztools.github.io/sfizz/" target="_blank">SFZTools</a></li>
     </ul>
     </details>
+    <li><a href="https://github.com/nodiscc/awesome-linuxaudio" target="_blank">GitHub - nodiscc/awesome-linuxaudio: [mirror] A list of software and resources for professional audio/video/live events production on Linux.</a></li>
+    <li><a href="https://strudel.cc/" target="_blank">Strudel REPL</a></li>
   </ul>
   </details>
   <details>
@@ -492,6 +504,8 @@
   <li><a href="https://feministhackerspaces.cargo.site/Ethical-Hardware-Kit" target="_blank">Ethical Hardware Kit | feministhackerspaces</a></li>
   <li><a href="https://freecycle.org/" target="_blank">Freecycle</a></li>
   <li><a href="https://www.repairfaq.org/" target="_blank">Repair FAQ</a></li>
+  <li><a href="https://www.storagecafe.com/blog/" target="_blank">Homepage - StorageCafe Blog - Your Go-to Source for All Things Self Storage</a></li>
+  <li><a href="https://www.half.earth/" target="_blank">Half Earth Socialism</a></li>
 </ul>
 </details>
 <details>
@@ -500,6 +514,7 @@
   <li><a href="https://www.etsy.com/shop/overyarncrafts/?etsrc=sdt&dd_referrer=" target="_blank">OverYarnCrafts - Etsy</a></li>
   <li><a href="https://bookshop.org/" target="_blank">Bookshop.org</a></li>
   <li><a href="https://www.banyanhouse.org/shop/" target="_blank">Materialism books | Banyan House</a></li>
+  <li><a href="https://www.oakandwillow.store/" target="_blank">Eco-friendly Cleaning Products | Oak & Willow | North Bay</a></li>
   <li><a href="https://mayhem.my/" target="_blank">Fuck Etsy | Mayhem Marketplace</a></li>
   <li><a href="https://nawapo.com/" target="_blank">Handcrafted Gifts by Native Americans | Nawapo</a></li>
   <li><a href="https://mntre.com/index.html" target="_blank">Open Source Hardware | MNT Research</a></li>
@@ -508,7 +523,7 @@
   <li><a href="https://allhands.shop/" target="_blank">AllHands.shop</a></li>
   <li><a href="https://www.fitmfest.com/" target="_blank">Fire in the Mountains</a></li>
   <li><a href="https://www.luigisbooks.com/" target="_blank">LUIGI'S LEGAL FUND BOOKSHOP</a></li>
-  <li><a href="https://subvert.fm/" target="_blank">Subvert — The Collectively Owned Music Marketplace</a></li>
+  <li><a href="https://subvert.fm/" target="_blank">Collectively Owned Music Marketplace | Subvert</a></li>
   <li><a href="https://get.even.biz/" target="_blank">EVEN | Buy The Art From The Artist</a></li>
 </ul>
 </details>
